# src/main/java/com/example/demo/model/GroupDB.java
@@ -1,7 +1,6 @@
 package com.example.demo.model;
 
 import lombok.Data;
-import lombok.NoArgsConstructor;
 import lombok.experimental.Accessors;
 
 import javax.persistence.Column;
@@ -9,33 +8,32 @@ import javax.persistence.Entity;
 import javax.persistence.GeneratedValue;
 import javax.persistence.GenerationType;
 import javax.persistence.Id;
-import javax.persistence.JoinColumn;
-import javax.persistence.ManyToOne;
+import javax.persistence.OneToMany;
 import javax.persistence.Table;
+import java.util.Set;
 import java.util.UUID;
 
 @Data
 @Accessors(fluent = true)
 @Entity
-@NoArgsConstructor
-@Table(name = "Income")
-public class IncomeDB {
+@Table
+public class GroupDB {
 
     @Id
     @GeneratedValue(strategy = GenerationType.AUTO)
     private UUID id;
 
     @Column
-    private long amount;
+    private String name;
 
     @Column
     private String description;
 
-    @JoinColumn(nullable = false)
-    @ManyToOne
-    private GroupDB group;
+    @Column
+    private long budget;
 
-    public long budget(){
-        return group().budget();
-    }
+    @OneToMany(mappedBy = "group")
+    @Column
+    private Set<IncomeDB> incomeDBSet;
+
 }
