# src/main/resources/api.yaml
@@ -5,7 +5,9 @@ info:
   title: "Swagger Petstore"
 tags:
   - name: "income"
-    description: "Income "
+    description: "Income"
+  - name: "group"
+    description: "Group"
 schemes:
   - "http"
 paths:
@@ -124,6 +126,121 @@ paths:
           description: "Invalid ID supplied"
         "404":
           description: "Income not found"
+  /group:
+    post:
+      tags:
+        - "group"
+      summary: "Add a new group"
+      description: ""
+      operationId: "addGroup"
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - in: "body"
+          name: "body"
+          description: "Group object that needs to be added"
+          required: true
+          schema:
+            $ref: "#/definitions/Group"
+      responses:
+        "201":
+          description: "Created"
+          schema:
+            $ref: "#/definitions/Group"
+        "405":
+          description: "Invalid input"
+          schema:
+            $ref: '#/definitions/ModelApiResponse'
+    put:
+      tags:
+        - "group"
+      summary: "Update group"
+      description: ""
+      operationId: "updateGroup"
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - in: "body"
+          name: "body"
+          description: "Group object that needs to be added"
+          required: true
+          schema:
+            $ref: "#/definitions/Group"
+      responses:
+        "200":
+          description: "Updated"
+          schema:
+            $ref: "#/definitions/Group"
+        "400":
+          description: "Invalid ID supplied"
+        "404":
+          description: "Pet not found"
+        "405":
+          description: "Validation exception"
+    get:
+      tags:
+        - "group"
+      summary: "Get all Group"
+      description: ""
+      operationId: "getAllGroup"
+      produces:
+        - "application/json"
+      responses:
+        "200":
+          description: "All Group"
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/Group"
+  /group/{groupId}:
+    get:
+      tags:
+        - "group"
+      summary: "Find group by ID"
+      description: "Returns a single group"
+      operationId: "getGroupById"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "groupId"
+          in: "path"
+          description: "ID of group to return"
+          required: true
+          type: "string"
+          format: "uuid"
+      responses:
+        "200":
+          description: "Successful operation"
+          schema:
+            $ref: "#/definitions/Group"
+        "400":
+          description: "Invalid ID supplied"
+        "404":
+          description: "Group not found"
+    delete:
+      tags:
+        - "group"
+      summary: "Delete group by ID"
+      description: "Deletes a single group"
+      operationId: "deleteGroupById"
+      parameters:
+        - name: "groupId"
+          in: "path"
+          description: "ID of group to delete"
+          required: true
+          type: "string"
+          format: "uuid"
+      responses:
+        "200":
+          description: "Successful operation"
+        "400":
+          description: "Invalid ID supplied"
+        "404":
+          description: "Group not found"
 definitions:
   Income:
     type: "object"
@@ -137,6 +254,24 @@ definitions:
       amount:
         type: "integer"
         format: "int64"
+      description:
+        type: "string"
+      budget:
+        type: "integer"
+        format: "int64"
+    xml:
+      name: "Income"
+  Group:
+    type: "object"
+    required:
+      - "name"
+      - "description"
+    properties:
+      id:
+        type: "string"
+        format: "uuid"
+      name:
+        type: "string"
       description:
         type: "string"
       budget:
